--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
       database: kwetter
 
 server:
-  port: 8081
+  port: 80
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:1111/eureka/
+      defaultZone: http://discovery/eureka/
