--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.hostname=discovery
+eureka.client.service-url.defaultZone=http://discovery/eureka/
 server.port=80
