--- a/kweet-service/src/main/resources/application.yml
+++ b/kweet-service/src/main/resources/application.yml
@@ -7,9 +7,10 @@ spring:
       host: mongo
 
 server:
-  port: 80
+  port: 8080
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery/eureka/
+    enabled: false
