Added url parsing
Parsing url's form kweets and shortening them with goo.gl

--- a/kweet-service/build.gradle
+++ b/kweet-service/build.gradle
@@ -57,7 +57,8 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile 'com.google.apis:google-api-services-urlshortener:v1-rev50-1.23.0'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 dependencyManagement {
