--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,28 +4,40 @@ services:
     image: com.zwolsman.kwetter/discovery-server
     container_name: discovery-server
     ports:
-    - 1111:80
+      - 1111:80
     volumes:
-    - discovery-data:/tmp
+      - discovery-data:/tmp
     restart: always
+
   account-service:
     image: com.zwolsman.kwetter/account-service
     container_name: account-service
     ports:
       - 8081:80
     volumes:
-    - account-service-data:/tmp
+      - account-service-data:/tmp
     restart: always
+
+  kweet-service:
+    image: com.zwolsman.kwetter/kweet-service
+    container_name: kweet-service
+    ports:
+      - 8082:80
+    volumes:
+      - kweet-service-data:/tmp
+    restart: always
+
   mongo:
     image: mongo:3.7
     container_name: mongodb-container
     ports:
-    - 27017:27017
+      - 27017:27017
     volumes:
-    - mongo-data:/data/db
-
+      - mongo-data:/data/db
+    restart: always
 
 volumes:
   discovery-data:
   account-service-data:
+  kweet-service-data:
   mongo-data:
