Fixed communication between 2 nodes Added link to User Resource

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
      name: web
 
 server:
-  port: 80
+  port: 1777
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://discovery/eureka/
+      defaultZone: http://us.majo-vps.nl:1111/eureka/
