--- a/kwetter-dao/build.gradle
+++ b/kwetter-dao/build.gradle
@@ -5,26 +5,20 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
-		maven {
-			url "https://plugins.gradle.org/m2/"
-		}
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-		classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.19.2')
 	}
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.palantir.docker'
 
-group = 'com.zwolsman.kwetter'
+group = 'com.zwolsman'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 compileKotlin {
@@ -51,13 +45,10 @@ ext {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+	compile("org.springframework.boot:spring-boot-starter-data-mongodb:${springBootVersion}")
+	compile('org.springframework.cloud:spring-cloud-starter-openfeign')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
-    compile project(":kwetter-dao")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
@@ -65,10 +56,4 @@ dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
-}
-
-docker {
-	name "${project.group}/${jar.baseName}"
-	files jar.archivePath
-	buildArgs(['JAR_FILE': "${jar.archiveName}"])
 }
