--- a/kweet-service/build.gradle
+++ b/kweet-service/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
     compile 'com.google.apis:google-api-services-urlshortener:v1-rev50-1.23.0'
+	compile project(":kwetter-dao")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
@@ -68,7 +69,7 @@ dependencyManagement {
 }
 
 docker {
-	name "murfzw/kwetter-kweet-service"
+	name "murfzw/kwetter-kweet-service:latest"
 	files jar.archivePath
 	buildArgs(['JAR_FILE': "${jar.archiveName}"])
 }
