--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ gradle-app.setting
 .idea
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+\.DS_Store
