--- a/kwetter-ios/Podfile
+++ b/kwetter-ios/Podfile
@@ -8,4 +8,5 @@ target 'kwetter-ios' do
   # Pods for kwetter-ios
   pod 'Kingfisher', '~> 4.0'
   pod 'SwiftyAttributes'
+  pod 'RelativeFormatter', '~> 0.8'
 end
