--- a/web/build.gradle
+++ b/web/build.gradle
@@ -53,6 +53,7 @@ ext {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.cloud:spring-cloud-starter-openfeign')
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
