--- a/web/build.gradle
+++ b/web/build.gradle
@@ -59,7 +59,8 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
-	compile project(":kwetter-dao")
+    compile ("com.auth0:java-jwt:3.3.0")
+    compile project(":kwetter-dao")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
